fixed contribution directive to include also assembly id, temporal fix of height for contributions in campaign page, temporal fix for aligns to botton the information of the contribution

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -1491,6 +1491,10 @@ button#second-vote {
   width: 40px;
   border-radius: 20px;
 }
+.contribution .push-to-bottom {
+  bottom: 5%;
+  position: absolute;
+}
 .contribution .contribution-title {
   display: inline-block;
   margin: 0;
