--- a/app/partials/directives/contribution/_contribution.scss
+++ b/app/partials/directives/contribution/_contribution.scss
@@ -27,6 +27,10 @@
     }
   }
 
+  & .push-to-bottom {
+    bottom: 5%;
+  }
+
   & .contribution-title{
     display: inline-block;
     margin: 0;
